--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -5,4 +5,9 @@ include_directories(.)
 #add_executable(3 3.cpp)
 #add_executable(4 4.cpp)
 #add_executable(5 5.cpp)
-add_executable(6 6.cpp)
+#add_executable(6 6.cpp)
+#add_executable(7 7.cpp)
+#add_executable(8 8.cpp)
+#add_executable(9 9.cpp)
+#add_executable(10 10.cpp)
+add_executable(11 11.cpp)
