--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -10,4 +10,5 @@ include_directories(.)
 #add_executable(8 8.cpp)
 #add_executable(9 9.cpp)
 #add_executable(10 10.cpp)
-add_executable(11 11.cpp)
+#add_executable(11 11.cpp)
+add_executable(12 12.cpp)
